Tile images not obeying height on mobile. Trying to fix by adding import tag in css...

--- a/style.scss
+++ b/style.scss
@@ -236,7 +236,7 @@ section {
     }
     img {
       width: 100%;
-      height: 80%;
+      height: 80% !important;
     }
     .tile-tooltip {
       background-color: rgba(20, 20, 20, 0.9);
